--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                PiG
-version:             0.1.1
+version:             0.2.0
 github:              PKopel/PiG
 license:             BSD3
 author:              Paweł Kopel
@@ -25,7 +25,7 @@ dependencies:
 - containers
 - mtl
 - text
-- attoparsec
+- parsec
 
 ghc-options:
 - -Wall
