add five interpreter directives

--- a/PiG.cabal
+++ b/PiG.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 40fe1466fc9b9f148f08b97a990e37ed2d18c9b5399bbb5b7f2fcd174058a77d
+-- hash: 4df7d5fc49906eb33a2b5505b29c31fac54d05e268a07d54dfee9e193c6cf46f
 
 name:           PiG
-version:        0.4.4
+version:        0.5.0
 description:    Please see the README on Github at <https://github.com/PKopel/PiG#readme>
 homepage:       https://github.com/PKopel/PiG#readme
 bug-reports:    https://github.com/PKopel/PiG/issues
@@ -28,7 +28,8 @@ source-repository head
 library
   exposed-modules:
       Import
-      Interp
+      Interp.Drct
+      Interp.Stmt
       Lang.Lexer
       Lang.Parser
       Run
