--- a/PiG.cabal
+++ b/PiG.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 956afecdc85d8a92500cd06395fca64d1546a9ab3d7c689cafcc67ebc3c796d1
+-- hash: 20afd516cf58a4a2819a562c503d215e1fbd77a4706a43ec868c34bc3699bb5d
 
 name:           PiG
-version:        0.6.3
+version:        0.6.4
 description:    Please see the README on Github at <https://github.com/PKopel/PiG#readme>
 homepage:       https://github.com/PKopel/PiG#readme
 bug-reports:    https://github.com/PKopel/PiG/issues
@@ -46,8 +46,8 @@ library
     , haskeline
     , mtl
     , parsec
+    , pretty-terminal
     , rio >=0.1.12.0
-    , text
   default-language: Haskell2010
 
 executable PiG
@@ -65,8 +65,8 @@ executable PiG
     , mtl
     , optparse-simple
     , parsec
+    , pretty-terminal
     , rio >=0.1.12.0
-    , text
   default-language: Haskell2010
 
 test-suite PiG-test
@@ -86,6 +86,6 @@ test-suite PiG-test
     , hspec
     , mtl
     , parsec
+    , pretty-terminal
     , rio >=0.1.12.0
-    , text
   default-language: Haskell2010
