--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                PiG
-version:             0.6.3
+version:             0.6.4
 github:              PKopel/PiG
 license:             BSD3
 author:              Paweł Kopel
@@ -24,9 +24,9 @@ dependencies:
 - rio >= 0.1.12.0
 - containers
 - mtl
-- text
 - parsec
 - haskeline
+- pretty-terminal
 
 ghc-options:
 - -Wall
