--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: PiG
-version: 0.12.2
+version: 0.13.0
 github: PKopel/PiG
 license: BSD3
 author: Paweł Kopel
@@ -24,6 +24,7 @@ dependencies:
   - rio >= 0.1.12.0
   - containers
   - mtl
+  - bytestring
   - array
   - parsec
   - haskeline
