--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: PiG
-version: 0.16.0
+version: 0.16.1
 github: PKopel/PiG
 license: BSD3
 author: Paweł Kopel
@@ -22,6 +22,7 @@ description: Please see the README on Github at <https://github.com/PKopel/PiG#r
 dependencies:
   - base >= 4.11 && < 10
   - rio >= 0.1.12.0
+  - rio-orphans
   - containers
   - mtl
   - text
