--- a/PiG.cabal
+++ b/PiG.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: eff904e5c9effaf97fa9becc4e9731e692f7848198d25e3abf84f88057b11d8b
+-- hash: e0d1caeedf2e929ffd408e307ad55aed5b0b37eedcf1b41fe7b90809602e53af
 
 name:           PiG
-version:        0.17.3
+version:        0.17.4
 description:    Please see the README on Github at <https://github.com/PKopel/PiG#readme>
 homepage:       https://github.com/PKopel/PiG#readme
 bug-reports:    https://github.com/PKopel/PiG/issues
@@ -27,14 +27,14 @@ source-repository head
 
 library
   exposed-modules:
-      Interp.Console
-      Interp.Directives
-      Interp.Directives.Parser
-      Interp.Statements
       Lang.BIF
       Lang.Lexer
       Lang.Parser
       Lang.Tokens
+      REPL.Console
+      REPL.Directives
+      REPL.Directives.Parser
+      REPL.Statements
       Run
       Utils.Completion
       Utils.Interp
