Fix test action

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,20 +24,29 @@ jobs:
           ghc-version: ${{ matrix.ghc }}
           stack-version: ${{ matrix.stack }}
 
+      - name: Install tools
+        run: |
+          sudo apt -y install alex happy
+
       - uses: actions/cache@v2.1.3
         name: Cache ~/.stack
         with:
           path: ~/.stack
           key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
+      - name: Initalize stack for LTS
+        run: |
+          stack update
+          stack init --resolver ${{ matrix.resolver }} --force
+
       - name: Install dependencies
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --only-dependencies
+          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
 
       - name: Build
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
+          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks
 
       - name: Test
         run: |
-          stack test --system-ghc
+          stack --resolver ${{ matrix.resolver }} test
