--- a/PiG.cabal
+++ b/PiG.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4ba499a7e4820c8ab69d1db04c6b36345ea5458348a5fd2a746e6727b8a4ab6e
+-- hash: 9aa3e6f3bdf0a35cc3f288b1c978e8fcc780502c407b908059d16b1900047000
 
 name:           PiG
 version:        0.0.19.0
@@ -49,6 +49,9 @@ library
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
+  build-tools:
+      alex
+    , happy
   build-depends:
       QuickCheck
     , array
