--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -106,5 +106,5 @@ jobs:
         with:
           upload_url: ${{ steps.get_release_info.outputs.upload_url }}
           asset_path: ./bin/pig
-          asset_name: pig-${{ env.tag_name }}-${{ env.os_name }}-amd64
+          asset_name: pig-${{ env.tag_name }}-amd64-${{ env.os_name }}
           asset_content_type: application/octet-stream
