--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -77,11 +77,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
+          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
 
       - name: Build
         run: |
-          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --copy-bins --local-bin-path ./bin
+          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --copy-bins --local-bin-path ./bin
 
       - name: Compress binary
         uses: svenstaro/upx-action@2.0.1
