--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,12 +43,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
+          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
 
       - name: Build
         run: |
-          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks
+          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks
 
       - name: Test
         run: |
-          stack --resolver ${{ matrix.resolver }} test
+          stack --system-ghc --resolver ${{ matrix.resolver }} test
