Add `listToStr` and `strToList`

--- a/PiG.cabal
+++ b/PiG.cabal
@@ -3,11 +3,9 @@ cabal-version: 1.12
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: afe25855a9100972876b775ba51d1e6ab00c347b11fa26fef24c95c76ad4d5c3
 
 name:           PiG
-version:        0.0.20.0
+version:        0.1.0
 description:    Please see the README on Github at <https://github.com/PKopel/PiG#readme>
 homepage:       https://github.com/PKopel/PiG#readme
 bug-reports:    https://github.com/PKopel/PiG/issues
@@ -31,6 +29,7 @@ library
       Lang.BIF.Alg
       Lang.BIF.Bool
       Lang.BIF.List
+      Lang.BIF.Str
       Lang.Lexer
       Lang.Parser
       Lang.Tokens
