--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,10 +40,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
         stack: ["2.7.5"]
         ghc: ["8.10.7"]
-        resolver: [lts-18.19]
 
     steps:
       - name: Check out code
@@ -70,23 +69,21 @@ jobs:
           path: ~/.stack
           key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
-      - name: Initalize stack for LTS
-        run: |
-          stack update
-          stack init --resolver ${{ matrix.resolver }} --force
-
-      - name: Install dependencies
-        run: |
-          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
-
       - name: Build
         run: |
-          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --copy-bins --local-bin-path ./bin
+          stack --system-ghc build --no-run-tests --no-run-benchmarks --copy-bins --local-bin-path ./bin
+
+      - if: matrix.os == 'windows-latest'
+        name: Set extension to .exe on Windows
+        run: echo "EXT=.exe" >> $GITHUB_ENV
+
+      - name: Set binary path name
+        run: echo "BINARY_PATH=./bin/pig${{ env.EXT }}" >> $GITHUB_ENV
 
       - name: Compress binary
         uses: svenstaro/upx-action@2.0.1
         with:
-          file: ./bin/pig
+          file: ${{ env.BINARY_PATH }}
 
       - name: Load Release URL File from release job
         uses: actions/download-artifact@v1
@@ -105,6 +102,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release_info.outputs.upload_url }}
-          asset_path: ./bin/pig
-          asset_name: pig-${{ env.tag_name }}-amd64-${{ env.os_name }}
+          asset_path: ${{ env.BINARY_PATH }}
+          asset_name: pig-${{ env.tag_name }}-amd64-${{ env.os_name }}${{ env.EXT }}
           asset_content_type: application/octet-stream
