--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,13 +8,12 @@ on:
 
 jobs:
   stack:
-    name: stack ${{ matrix.stack }} / resolver ${{ matrix.resolver }} / ghc ${{ matrix.ghc }}
+    name: stack ${{ matrix.stack }} / ghc ${{ matrix.ghc }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         stack: ["2.7.5"]
         ghc: ["8.10.7"]
-        resolver: [lts-18.19]
 
     steps:
       - uses: actions/checkout@v2
@@ -26,29 +25,16 @@ jobs:
           ghc-version: ${{ matrix.ghc }}
           stack-version: ${{ matrix.stack }}
 
-      - name: Install alex and happy
-        run: |
-          sudo apt -y install alex happy
-
       - uses: actions/cache@v2.1.3
         name: Cache ~/.stack
         with:
           path: ~/.stack
           key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
-      - name: Initalize stack for LTS
-        run: |
-          stack update
-          stack init --resolver ${{ matrix.resolver }} --force
-
-      - name: Install dependencies
-        run: |
-          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
-
       - name: Build
         run: |
-          stack --system-ghc --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks
+          stack --system-ghc build --no-run-tests --no-run-benchmarks
 
       - name: Test
         run: |
-          stack --system-ghc --resolver ${{ matrix.resolver }} test
+          stack --system-ghc test
