--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,10 +48,6 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Set env
-        run: |
-          echo "tag_name=$(echo ${{ github.ref }} | cut -d. -f3-)" >> $GITHUB_ENV
-
       - if: matrix.os == 'ubuntu-latest'
         run: |
           echo "os_name=linux" >> $GITHUB_ENV
@@ -107,5 +103,5 @@ jobs:
         with:
           upload_url: ${{ steps.get_release_info.outputs.upload_url }}
           asset_path: ${{ env.BINARY_PATH }}
-          asset_name: pig-${{ env.tag_name }}-amd64-${{ env.os_name }}${{ env.EXT }}
+          asset_name: pig-amd64-${{ env.os_name }}${{ env.EXT }}
           asset_content_type: application/octet-stream
