--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,7 +58,7 @@ jobs:
 
       - if: matrix.os == 'windows-latest'
         run: |
-          echo "os_name=darwin" >> $GITHUB_ENV
+          echo "os_name=windows" >> $GITHUB_ENV
           echo "EXT=.exe" >> $GITHUB_ENV
 
       - uses: haskell/actions/setup@v2
