Update release action

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -77,10 +77,13 @@ jobs:
         run: |
           stack --system-ghc build --no-run-tests --no-run-benchmarks --copy-bins --local-bin-path ./bin
 
+      - name: Set binary path name
+        run: echo "BINARY_PATH=./bin/pig${{ env.EXT }}" >> $GITHUB_ENV
+
       - name: Compress binary
         uses: svenstaro/upx-action@2.0.1
         with:
-          file: ./bin/pig
+          file: ${{ env.BINARY_PATH }}
 
       - name: Load Release URL File from release job
         uses: actions/download-artifact@v1
@@ -99,6 +102,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release_info.outputs.upload_url }}
-          asset_path: ./bin/pig
+          asset_path: ${{ env.BINARY_PATH }}
           asset_name: pig-amd64-${{ env.os_name }}${{ env.EXT }}
           asset_content_type: application/octet-stream
