--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -83,7 +83,7 @@ jobs:
       - name: Compress binary
         uses: svenstaro/upx-action@2.0.1
         with:
-          file: ${{ env.BINARY_PATH }}
+          file: ./bin/pig${{ env.EXT }}
 
       - name: Load Release URL File from release job
         uses: actions/download-artifact@v1
