--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        stack: ["2.7.5"]
+        cabal: ["3.2"]
         ghc: ["8.10.7"]
 
     steps:
@@ -65,17 +65,22 @@ jobs:
         name: Setup Haskell Stack
         with:
           ghc-version: ${{ matrix.ghc }}
-          stack-version: ${{ matrix.stack }}
+          cabal-version: ${{ matrix.cabal }}
 
-      - uses: actions/cache@v2.1.3
-        name: Cache ~/.stack
-        with:
-          path: ~/.stack
-          key: ${{ runner.os }}-${{ matrix.ghc }}-stack
-
-      - name: Build
+      - name: Freeze
         run: |
-          stack --system-ghc build --no-run-tests --no-run-benchmarks --copy-bins --local-bin-path ./bin
+          cabal freeze
+
+      - name: Cache ~/.cabal/store
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
+          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
+
+      - name: Build binary
+        run: |
+          mkdir bin
+          cabal install exe:pig --install-method=copy --overwrite-policy=always --installdir=bin
 
       - name: Set binary path name
         run: echo "BINARY_PATH=./bin/pig${{ env.EXT }}" >> $GITHUB_ENV
