--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -81,7 +81,7 @@ jobs:
       - name: Build binary
         run: |
           mkdir bin
-          cabal install exe:pig --install-method=copy --overwrite-policy=always --installdir=bin
+          cabal install exe:pig --install-method=copy --overwrite-policy=always --installdir=bin --enable-executable-stripping --enable-library-stripping
 
       - name: Set binary path name
         if: matrix.os != 'windows-latest'
