--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.19
+resolver: lts-18.21
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -42,9 +42,9 @@ packages:
 # extra-deps: []
 
 # Override default flag values for local packages and extra-deps
-flags:
-  mintty:
-    Win32-2-13-1: false
+# flags:
+#   mintty:
+#     Win32-2-13-1: false
 # Extra package databases containing global packages
 # extra-package-dbs: []
 
