--- a/PiG.cabal
+++ b/PiG.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           PiG
-version:        0.1.1
+version:        0.1.2
 description:    Please see the README on Github at <https://github.com/PKopel/PiG#readme>
 homepage:       https://github.com/PKopel/PiG#readme
 bug-reports:    https://github.com/PKopel/PiG/issues
@@ -48,22 +48,15 @@ library
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
-  build-tools:
-      alex
-    , happy
   build-depends:
-      QuickCheck
-    , array
+      array
     , attoparsec
     , base >=4.11 && <10
     , containers
     , exceptions
     , haskeline >=0.8
-    , hspec
-    , hspec-core
     , mtl
-    , prettyprinter
-    , prettyprinter-ansi-terminal
+    , pretty-terminal
     , rio >=0.1.12.0
     , rio-orphans
     , text
@@ -78,19 +71,15 @@ executable pig
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       PiG
-    , QuickCheck
     , array
     , attoparsec
     , base >=4.11 && <10
     , containers
     , exceptions
     , haskeline >=0.8
-    , hspec
-    , hspec-core
     , mtl
     , optparse-simple
-    , prettyprinter
-    , prettyprinter-ansi-terminal
+    , pretty-terminal
     , rio >=0.1.12.0
     , rio-orphans
     , text
@@ -118,8 +107,7 @@ test-suite pig-test
     , hspec
     , hspec-core
     , mtl
-    , prettyprinter
-    , prettyprinter-ansi-terminal
+    , pretty-terminal
     , rio >=0.1.12.0
     , rio-orphans
     , text
