--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1.1.1
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -42,11 +42,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         cabal: ["3.10"]
-        ghc: ["9.4.7"]
+        ghc: ["9.6.3"]
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - if: matrix.os == 'ubuntu-latest'
         run: |
@@ -61,7 +61,7 @@ jobs:
           echo "os_name=windows" | Out-File -FilePath $env:GITHUB_ENV -Append
           echo "EXT=.exe" | Out-File -FilePath $env:GITHUB_ENV -Append
 
-      - uses: haskell/actions/setup@v2
+      - uses: haskell-actions/setup@v2
         name: Setup Haskell
         id: setup-haskell-cabal
         with:
@@ -73,7 +73,7 @@ jobs:
           cabal freeze
 
       - name: Cache ~/.cabal/store
-        uses: actions/cache@v1
+        uses: actions/cache@v3
         with:
           path: ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
           key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
@@ -102,17 +102,20 @@ jobs:
           name: release_url
 
       - name: Get Release File Name & Upload URL
-        id: get_release_info
-        run: |
-          echo "::set-output name=upload_url::$(cat release_url/release_url.txt)"
+        if: matrix.os != 'windows-latest'
+        run: echo "UPLOAD_URL=$(cat release_url/release_url.txt)" >> $GITHUB_ENV
+
+      - name: Get Release File Name & Upload URL
+        if: matrix.os == 'windows-latest'
+        run: echo "UPLOAD_URL=$(cat release_url/release_url.txt)" | Out-File -FilePath $env:GITHUB_ENV -Append
 
       - name: Upload Release Asset
         id: upload-release-asset
-        uses: actions/upload-release-asset@v1.0.1
+        uses: shogo82148/actions-upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get_release_info.outputs.upload_url }}
+          upload_url: ${{ env.UPLOAD_URL }}
           asset_path: ${{ env.BINARY_PATH }}
           asset_name: pig-amd64-${{ env.os_name }}${{ env.EXT }}
           asset_content_type: application/octet-stream
