--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,19 +13,19 @@ jobs:
     strategy:
       matrix:
         stack: ["2.11.1"]
-        ghc: ["9.4.7"]
+        ghc: ["9.6.3"]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         name: Checkout
 
-      - uses: haskell/actions/setup@v2
+      - uses: haskell-actions/setup@v2
         name: Setup Haskell Stack
         with:
           ghc-version: ${{ matrix.ghc }}
           stack-version: ${{ matrix.stack }}
 
-      - uses: actions/cache@v2.1.3
+      - uses: actions/cache@v3
         name: Cache ~/.stack
         with:
           path: ~/.stack
